@@ -8,7 +8,6 @@
 #   [SDL][32.150] Scene objects count: 4502
 #
 # 35secs light preprocessing:
-#   [LuxRays][44.217] Total triangle count: 17860024
 #   [LuxRays][44.227] EmbreeAccel build time: 9ms
 #   [LuxCore][52.774] Light step #1 preprocessing time: 8.54706secs
 #   [LuxCore][54.918] Light step #2 preprocessing time: 2.14381secs
@@ -26,11 +25,32 @@
 #
 # 15secs parsing:
 #   [SDL][15.249] Scene objects count: 4502
+#
+# 16secs light preprocessing:
+#   [LuxRays][16.024] EmbreeAccel build time: 9ms
+#   [LuxCore][19.819] Light step #1 preprocessing time: 3.79506secs
+#   [LuxCore][21.233] Light step #2 preprocessing time: 1.41389secs
+#   [LuxCore][26.683] Light step #3 preprocessing time: 5.44991secs
+#   [LuxCore][26.683] Light step #4 preprocessing time: 3.00407e-05secs
+#   [LuxCore][32.375] Light step #5 preprocessing time: 5.69201secs
+#   [LuxCore][32.375] Light total preprocessing time: 16.3509secs
 ################################################################################
 # Optimized ToString() 2021/02/19
 #
 # 10secs parsing:
 #   [SDL][10.546] Scene objects count: 4502
+################################################################################
+# Partial multi-thread support in LightSourceDefinitions::Preprocess() 2021/02/22
+#
+#
+# 8secs light preprocessing:
+#   [LuxRays][16.892] EmbreeAccel build time: 19ms
+#   [LuxCore][20.773] Light step #1 preprocessing time: 3.88031secs
+#   [LuxCore][22.160] Light step #2 preprocessing time: 1.3868secs
+#   [LuxCore][22.716] Light step #3 preprocessing time: 0.556359secs
+#   [LuxCore][22.716] Light step #4 preprocessing time: 3.48091e-05secs
+#   [LuxCore][25.295] Light step #5 preprocessing time: 2.57913secs
+#   [LuxCore][25.295] Light total preprocessing time: 8.40269secs
 ################################################################################
 
 light.maxdepth = 10
